Fix: Reduce the font size of post titles on small screens

--- a/frontend/src/app/feature/posts/details/post-details.component.scss
+++ b/frontend/src/app/feature/posts/details/post-details.component.scss
@@ -48,6 +48,10 @@
     & > * {
       padding-right: .5rem;
     }
+    
+    @include media-breakpoint-down(xs) {
+      font-size: 1rem;
+    }
   }
   
   .metadata {
